--- a/dev.ipynb
+++ b/dev.ipynb
@@ -2,39 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from cit_images import batch_predict, read_boxes64, read_boxes\n",
-    "from tf.serving import predict, multipredict"
+    "from tf.serving import predict, multipredict, encode64"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('.images/boxes/boxes-0-0.jpg', '.images/boxes/boxes-1-0.jpg'),\n",
-       " ('.images/boxes/boxes-0-1.jpg', '.images/boxes/boxes-1-1.jpg'),\n",
-       " ('.images/boxes/boxes-0-2.jpg', '.images/boxes/boxes-1-2.jpg'),\n",
-       " ('.images/boxes/boxes-0-3.jpg', '.images/boxes/boxes-1-3.jpg'),\n",
-       " ('.images/boxes/boxes-0-4.jpg', '.images/boxes/boxes-1-4.jpg'),\n",
-       " ('.images/boxes/boxes-0-5.jpg', '.images/boxes/boxes-1-5.jpg'),\n",
-       " ('.images/boxes/boxes-0-6.jpg', '.images/boxes/boxes-1-6.jpg'),\n",
-       " ('.images/boxes/boxes-0-7.jpg', '.images/boxes/boxes-1-7.jpg')]"
+       "Right(value=[ImagePreds(preds=['e4', 'e4', 'e5', 'ed4', 'de4', 'd4', 'Ae4', 'e3', 'Re4', 'c4', 'e6', 'Te4', 'x4', 'ed4', 'ce4', 'ef4', 'e5', 'Ce4', 'De4', 'e7', 'e1', 'e8', 'fe4', 'ec4', 'f4'], logprobs=[-0.187645972, -2.03857613, -5.38002253, -5.48625231, -5.90796947, -5.94354916, -6.26216364, -6.26460361, -6.38398123, -6.42287493, -6.52720737, -6.62037706, -6.71908665, -6.8468709, -6.91570091, -7.18795252, -7.23095608, -7.27822685, -7.35388231, -7.52508783, -7.60124731, -7.67382145, -7.6892662, -7.72251844, -7.8613205])], tag='right')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "read_boxes(images_path='.images')"
+    "image_path = '.images/boxes/boxes-0-0.jpg'\n",
+    "with open(image_path, 'rb') as f:\n",
+    "  img = encode64(f.read())\n",
+    "\n",
+    "await predict([img], host='http://localhost', port = 8501, endpoint = '/v1/models/ocr:predict')"
    ]
   },
   {
