tf.records: batched read

--- a/dev.ipynb
+++ b/dev.ipynb
@@ -2,56 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cit_images import batch_predict, read_boxes64, read_boxes\n",
-    "from tf.serving import predict, multipredict, encode64"
+    "import tf.records as tfr\n",
+    "import tensorflow as tf\n",
+    "from glob import glob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Right(value=[ImagePreds(preds=['e4', 'e4', 'e5', 'ed4', 'de4', 'd4', 'Ae4', 'e3', 'Re4', 'c4', 'e6', 'Te4', 'x4', 'ed4', 'ce4', 'ef4', 'e5', 'Ce4', 'De4', 'e7', 'e1', 'e8', 'fe4', 'ec4', 'f4'], logprobs=[-0.187645972, -2.03857613, -5.38002253, -5.48625231, -5.90796947, -5.94354916, -6.26216364, -6.26460361, -6.38398123, -6.42287493, -6.52720737, -6.62037706, -6.71908665, -6.8468709, -6.91570091, -7.18795252, -7.23095608, -7.27822685, -7.35388231, -7.52508783, -7.60124731, -7.67382145, -7.6892662, -7.72251844, -7.8613205])], tag='right')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "image_path = '.images/boxes/boxes-0-0.jpg'\n",
-    "with open(image_path, 'rb') as f:\n",
-    "  img = encode64(f.read())\n",
+    "schema = tfr.Dataset.read('records/mr').meta.schema_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = glob('records/mr/*.tfrecord.gz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Iterable, Mapping, Literal\n",
+    "from tf.records import Field, parse\n",
     "\n",
-    "await predict([img], host='http://localhost', port = 8501, endpoint = '/v1/models/ocr:predict')"
+    "def batched_read(\n",
+    "  schema: Mapping[str, Field], filepaths: Iterable[str], *,\n",
+    "  compression: Literal['GZIP', 'ZLIB'] | None = None,\n",
+    "  keep_order: bool = True, batch_size: int = 16\n",
+    ") -> tf.data.Dataset:\n",
+    "  \"\"\"Parse a series of TFRecord files into a single dataset\"\"\"\n",
+    "  ignore_order = tf.data.Options()\n",
+    "  ignore_order.experimental_deterministic = keep_order\n",
+    "  return (\n",
+    "    tf.data.TFRecordDataset(filepaths, compression_type=compression, num_parallel_reads=tf.data.AUTOTUNE)\n",
+    "    .with_options(ignore_order)\n",
+    "    .batch(batch_size)\n",
+    "    .map(parse(schema).batch, num_parallel_calls=tf.data.AUTOTUNE)\n",
+    "  )\n",
+    "\n",
+    "ds = batched_read(schema, files, compression='GZIP', keep_order=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Right(value=[([('e4', -0.187645733), ('e4', -2.03857732), ('e5', -5.38002157), ('ed4', -5.4862504), ('de4', -5.90797043), ('d4', -5.94355), ('Ae4', -6.26216507), ('e3', -6.26460314), ('Re4', -6.38398266), ('c4', -6.42287493), ('e6', -6.52720642), ('Te4', -6.62037849), ('x4', -6.7190876), ('ed4', -6.84687185), ('ce4', -6.91570187), ('ef4', -7.18795204), ('e5', -7.23095608), ('Ce4', -7.27822828), ('De4', -7.35388374), ('e7', -7.52508688), ('e1', -7.60124779), ('e8', -7.67382145), ('fe4', -7.68926764), ('ec4', -7.72251797), ('f4', -7.86132145)], [('e4', -0.141589686), ('e4', -2.35486913), ('e5', -5.24382877), ('c4', -5.4035759), ('d4', -6.02367878), ('ed4', -6.24456215), ('e3', -6.30107641), ('e6', -6.37659121), ('ce4', -6.44709778), ('x4', -6.58544731), ('e7', -6.77404118), ('Ae4', -7.0326848), ('e2', -7.11654758), ('Ce4', -7.13149834), ('de4', -7.15152788), ('Re4', -7.16754055), ('Te4', -7.21641922), ('b4', -7.39393711), ('e5', -7.45711231), ('a4', -7.53002357), ('f4', -7.55076027), ('ec4', -7.57075119), ('ed4', -7.6482892), ('e8', -7.93873644), ('De4', -7.94969702)]), ([('g6', -0.110934868), ('g6', -3.8845222), ('Cg6', -4.13558388), ('f6', -4.53732395), ('Tg6', -4.80105162), ('c6', -4.9655838), ('g5', -5.31853628), ('gf6', -5.77573633), ('g3', -5.84899759), ('Ag6', -5.86265421), ('Rg6', -5.98540735), ('g4', -6.11747026), ('x6', -6.17776108), ('Dg6', -6.17954111), ('e6', -6.27151585), ('cg6', -6.38638783), ('g7', -6.5806427), ('a6', -6.71554565), ('fg6', -6.88277054), ('b6', -7.1043), ('hg6', -7.1335206), ('d6', -7.16890192), ('h6', -7.39890623), ('g8', -7.51702213), ('eg6', -7.69009256)], [('g6', -0.108357236), ('g6', -2.74594355), ('a6', -5.3539319), ('e6', -6.09436798), ('g3', -6.17030907), ('x6', -6.24475241), ('Ag6', -6.40502071), ('Tg6', -6.41155863), ('g5', -6.49851418), ('gf6', -6.52282143), ('g4', -6.54002476), ('Rg6', -6.70125389), ('g7', -6.77699137), ('f6', -6.78625536), ('b6', -6.85336113), ('Cg6', -6.95762587), ('hg6', -7.01725483), ('ge6', -7.06451035), ('fg6', -7.09779263), ('ga6', -7.29199505), ('bg6', -7.3444047), ('Dg6', -7.4837), ('gb6', -7.49388409), ('h6', -7.69713163), ('eg6', -7.70223761)]), ([('d4', -0.112312078), ('d4', -3.1832397), ('c4', -4.55101728), ('Cd4', -4.8669405), ('cd4', -5.00119734), ('a4', -5.3649), ('e4', -5.47114182), ('d5', -5.51361513), ('Ad4', -5.63615417), ('b4', -5.93233538), ('Td4', -6.0015645), ('Dd4', -6.09075928), ('d3', -6.35709286), ('f4', -6.68261099), ('d6', -6.77974033), ('x4', -6.86944437), ('ed4', -7.04360485), ('Rd4', -7.17732954), ('ad4', -7.51184368), ('d7', -7.53949642), ('g4', -7.54267), ('dc4', -7.59624767), ('d2', -7.65350914), ('h4', -7.72691154), ('d1', -7.80798531)], [('d4', -0.0579912215), ('d4', -3.73282361), ('d5', -5.38312578), ('cd4', -6.08659029), ('e4', -6.09409714), ('d3', -6.13204861), ('x4', -6.37055063), ('c4', -6.64217758), ('ed4', -6.66134596), ('a4', -6.69575262), ('d6', -6.71167803), ('d7', -7.03384781), ('b4', -7.03717899), ('Cd4', -7.05025148), ('Dd4', -7.11098623), ('d2', -7.1463), ('f4', -7.22687721), ('Td4', -7.26948166), ('Ad4', -7.40201139), ('de4', -7.44513798), ('Rd4', -7.51794767), ('dc4', -7.78618574), ('db4', -7.83635092), ('df4', -7.90447), ('d8', -8.10754108)]), ([('Ag7', -1.09505415), ('Ac7', -1.18652499), ('Aa7', -2.00053263), ('Ae7', -3.73478174), ('Ab7', -4.13567257), ('Ax7', -4.42303848), ('Ad7', -4.45256853), ('Ah7', -4.48603058), ('Tg7', -4.68281555), ('Tc7', -4.77502966), ('Agc7', -4.91197252), ('Af7', -5.03449631), ('g7', -5.07104397), ('c7', -5.14873314), ('Acg7', -5.4861846), ('Ta7', -5.59310341), ('Rg7', -5.66589689), ('Ag5', -5.681), ('Rc7', -5.76565552), ('Ac5', -5.77247143), ('Aac7', -5.8078661), ('Dg7', -5.94145393), ('Ag6', -5.95147228), ('a7', -5.96680737), ('Dc7', -6.04121256)], [('Ag7', -0.0866905376), ('Ae7', -4.32632446), ('Ax7', -5.16158152), ('Ab7', -5.22474861), ('Aa7', -5.45633316), ('Dg7', -5.57864666), ('Ag6', -5.58473158), ('Rg7', -5.62850714), ('Ag2', -5.64028931), ('Ah7', -5.68677568), ('Ac7', -5.81824), ('Ag5', -5.94356728), ('Ag8', -5.9823823), ('Af7', -6.00015259), ('Ag3', -6.10976267), ('Tg7', -6.14209366), ('Ag4', -6.33519793), ('Aeg7', -6.38683558), ('Ad7', -6.59096718), ('Cg7', -6.72803879), ('g7', -6.7389636), ('Age7', -6.77990389), ('Ag1', -6.86054945), ('Axg7', -7.22067738), ('Aga7', -7.28050184)]), ([('Cc3', -0.0673867464), ('c3', -4.74011469), ('Cc6', -4.99097586), ('Cc4', -5.04987383), ('Cc2', -5.30772781), ('c3', -5.58430433), ('Ce3', -6.04608631), ('Cc5', -6.08357668), ('Cec3', -6.09886074), ('Cc7', -6.10706711), ('Ac3', -6.23784304), ('Cce3', -6.40617371), ('Lc3', -6.46394253), ('bc3', -6.49188089), ('Tc3', -6.54162359), ('Dc3', -6.54933357), ('Rc3', -6.5528574), ('Fc3', -6.67674637), ('Ccc3', -6.74237537), ('Cc8', -6.96347141), ('dc3', -7.21461725), ('Ccd3', -7.28408623), ('Sc3', -7.33675194), ('Cc1', -7.46043968), ('Cd3', -7.67933941)], [('Cc3', -0.093960382), ('Cc6', -4.58063745), ('Ce3', -4.78625393), ('Ccc3', -5.23979092), ('Cc2', -5.51387), ('Ca3', -5.59476328), ('Cec3', -5.64173), ('Tc3', -5.67023), ('Cb3', -5.72411), ('Cc4', -5.7275629), ('Cc7', -5.80388975), ('Cc5', -5.80780554), ('Lc3', -5.82080841), ('Ac3', -5.95129204), ('c3', -6.02668095), ('Rc3', -6.1818676), ('Cd3', -6.22213364), ('Cc8', -6.29981565), ('Dc3', -6.30318499), ('Cac3', -6.44836664), ('Cbc3', -6.57771349), ('Cx3', -6.60387516), ('Cf3', -6.64729595), ('c3', -6.65084267), ('Cg3', -6.67939949)]), ([('c6', -0.468296796), ('c4', -2.50204778), ('c3', -3.41403556), ('Cc6', -3.60588145), ('c5', -3.81771731), ('e6', -4.03917599), ('c8', -4.14193344), ('c6', -4.24969482), ('b6', -4.45078182), ('Tc6', -4.57715273), ('d6', -4.61983395), ('c7', -4.62806892), ('c2', -4.70164), ('g6', -4.71924067), ('f6', -5.08563566), ('a6', -5.33325), ('Rc6', -5.34890223), ('Ac6', -5.38203096), ('Dc6', -5.57735729), ('x6', -5.62425613), ('Cc4', -5.63958), ('c1', -6.04437), ('e4', -6.07287407), ('c4', -6.28339291), ('b4', -6.48448038)], [('c6', -0.227799401), ('e6', -3.66367626), ('Cc6', -3.74427342), ('f6', -3.82721019), ('c3', -3.87975311), ('d6', -4.43404055), ('c4', -4.54771423), ('Rc6', -4.67461395), ('a6', -5.06757212), ('Dc6', -5.11000872), ('c7', -5.11143255), ('Tc6', -5.19196844), ('g6', -5.30660582), ('Ac6', -5.59542131), ('c5', -5.63326025), ('c6', -5.71305561), ('x6', -5.7235961), ('b6', -5.77522135), ('c8', -5.94122791), ('c2', -6.01017809), ('h6', -6.43220806), ('c1', -7.0573535), ('ec6', -7.06960964), ('Ce6', -7.18059254), ('dc6', -7.30914307)]), ([('Ae3', -0.145365253), ('Ae2', -2.81995702), ('Ae6', -4.29171848), ('Ae4', -4.57827091), ('Ae5', -4.88126469), ('e3', -5.05388594), ('Ac3', -5.37541151), ('Ae7', -5.54733419), ('Re3', -5.78242207), ('Ae8', -5.9417119), ('De3', -5.98662472), ('Ag3', -6.19272232), ('Te3', -6.39072084), ('Ce3', -6.50596142), ('Ad3', -6.55916), ('Ae1', -6.76405287), ('Ab3', -6.77342033), ('Aa3', -6.99049425), ('e3', -7.00942087), ('Af3', -7.31063175), ('Ax3', -7.44155741), ('Ne3', -7.58455181), ('Ah3', -7.67411232), ('e2', -7.72840261), ('Be3', -7.72904)], [('Ae3', -0.759003222), ('Ac3', -1.31821477), ('Af3', -3.45906138), ('Ag3', -3.46270037), ('Ax3', -3.89607191), ('Ae6', -4.0567131), ('Ab3', -4.40341425), ('Ae5', -4.51220369), ('Ac6', -4.61592436), ('Aa3', -4.6652813), ('Aec3', -4.68321419), ('Ae7', -4.94730234), ('Ae4', -4.99152517), ('Ae8', -5.03312683), ('Ace3', -5.03592587), ('Ac5', -5.07142496), ('Ad3', -5.07483292), ('Ah3', -5.11430025), ('Ac7', -5.50651407), ('Ac4', -5.5507369), ('Ac8', -5.59233856), ('Ae2', -5.70881844), ('Te3', -6.17095041), ('Ae1', -6.26697636), ('Ac2', -6.26803)]), ([('d5', -0.0658919513), ('d4', -3.88020015), ('d5', -4.22476), ('d6', -6.1999836), ('cd5', -6.28856659), ('Ad5', -6.5531044), ('Td5', -6.55516195), ('d3', -6.58157444), ('f5', -6.58450174), ('x5', -6.59409189), ('e5', -6.71003723), ('a5', -6.90521431), ('d1', -6.91696596), ('ed5', -6.93043613), ('Rd5', -6.9921279), ('c5', -7.1023283), ('d7', -7.13059187), ('d8', -7.20161963), ('Cd5', -7.28967571), ('df5', -7.39369202), ('Dd5', -7.39496613), ('fd5', -7.49780607), ('d', -7.52464628), ('d2', -7.64088297), ('b5', -7.6793251)], [('d5', -0.125193655), ('d5', -2.85963821), ('d4', -5.15061617), ('a5', -5.34649467), ('Td5', -5.42802906), ('cd5', -5.76734686), ('Cd5', -5.90827847), ('e5', -5.92027092), ('d6', -5.93717194), ('Rd5', -6.05593252), ('c5', -6.08100224), ('g5', -6.08405638), ('x5', -6.08830643), ('Dd5', -6.1673646), ('Ad5', -6.3845768), ('d3', -6.45589924), ('f5', -6.51875973), ('b5', -6.65467405), ('ed5', -6.74043131), ('de5', -7.09230709), ('d7', -7.12581158), ('ad5', -7.24168491), ('d8', -7.51486588), ('fd5', -7.52891588), ('dc5', -7.54826784)])], tag='right')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4000"
+     ]
     }
    ],
    "source": [
-    "await multipredict(read_boxes64(images_path='.images'), host='http://localhost/')"
+    "for i, x in ds.enumerate():\n",
+    "  if i % 1000 == 0:\n",
+    "    print(f'\\r{i}', end='', flush=True)"
    ]
   }
  ],
