--- a/dev.ipynb
+++ b/dev.ipynb
@@ -2,63 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pydantic import BaseModel, Field, ConfigDict"
+    "import tf.records as tfr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Model(BaseModel):\n",
-    "  model_config = ConfigDict(populate_by_name=True)\n",
-    "  aliased_: str = Field(alias='aliased')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Model(aliased_='foo')"
+       "104857600"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Model.model_validate(dict(aliased='foo'))"
+    "tfr.shard_size(10000, 256*64*4*0.4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'aliased_': 'foo'}"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Model(aliased='foo').model_dump()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
