--- a/dev.ipynb
+++ b/dev.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tf.records as tfr"
+    "import tf.records as tfr\n",
+    "import numpy as np"
    ]
   },
   {
@@ -15,26 +16,135 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-08-16 15:01:58.110003: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-08-16 15:01:58.121372: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-08-16 15:01:58.124568: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-08-16 15:01:58.133334: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-08-16 15:01:58.715435: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
+   "source": [
+    "schema = tfr.schema(img=tfr.SeqTensor(shape=(100, 3), dtype='int'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = np.zeros((100, 100, 3), dtype=np.uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ser = tfr.serialize(schema, img=img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1723813319.353724     706 cuda_executor.cc:1001] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "I0000 00:00:1723813319.366956     706 cuda_executor.cc:1001] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "I0000 00:00:1723813319.366999     706 cuda_executor.cc:1001] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "I0000 00:00:1723813319.369341     706 cuda_executor.cc:1001] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "I0000 00:00:1723813319.369395     706 cuda_executor.cc:1001] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "I0000 00:00:1723813319.369418     706 cuda_executor.cc:1001] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "I0000 00:00:1723813320.334849     706 cuda_executor.cc:1001] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "I0000 00:00:1723813320.334907     706 cuda_executor.cc:1001] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-08-16 15:02:00.334917: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2112] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "I0000 00:00:1723813320.334953     706 cuda_executor.cc:1001] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-08-16 15:02:00.334972: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2021] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 5851 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 2070 Super, pci bus id: 0000:01:00.0, compute capability: 7.5\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "104857600"
+       "{'img': <tf.Tensor: shape=(100, 100, 3), dtype=int64, numpy=\n",
+       " array([[[0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0]],\n",
+       " \n",
+       "        ...,\n",
+       " \n",
+       "        [[0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0],\n",
+       "         [0, 0, 0]]])>}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tfr.shard_size(10000, 256*64*4*0.4)"
+    "tfr.parse(schema).sample(ser)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -53,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
